[#32]Refactor: Link 코드 개선
