# src/controllers/link.controller.js
@@ -1,7 +1,7 @@
 import { response } from "@config/response";
 import { status } from "@config/response.status";
 import { BaseError } from "@config/error";
-import { createNewLinkSer, deleteLinkByIdSer, generateUrlSummary, getLinkSer, updateLikeSer, updateVisitSer, updateZipIdSer } from "@services/link.service";
+import { createNewLinkSer, deleteLinkByIdSer, generateUrlSummary, getLinkByIdSer, getLinksSer, updateLikeSer, updateVisitSer, updateZipIdSer } from "@services/link.service";
 
 
 export const getLinksCnt = async  (req, res) => {
@@ -10,9 +10,19 @@ export const getLinksCnt = async  (req, res) => {
     const tag = req.query.tag;
     
     try {
-        res.send(response(status.SUCCESS, await getLinkSer(zip_id, user_id, tag)));
+        res.send(response(status.SUCCESS, await getLinksSer(zip_id, user_id, tag)));
     } catch (err) {
-        return BaseError(status.BAD_REQUEST)
+        return BaseError(status.INTERNAL_SERVER_ERROR)
+    }
+}
+
+export const getLinkByIdCnt = async (req, res) => {
+    const link_id = req.params.link_id;
+
+    try{
+        res.send(response(status.SUCCESS, await getLinkByIdSer(link_id)))
+    } catch (err) {
+        return BaseError(status.INTERNAL_SERVER_ERROR);
     }
 }
 
@@ -20,14 +30,14 @@ export const getSummaryCnt = async (req,res) => {
     const url = req.body.url;
 
     if (!url) { // 에러 메시지 추후 수정
-        return BaseError(status.NOT_FOUND);
+        return BaseError(status.BAD_REQUEST);
     }
 
     try {
         const AIResponse = await generateUrlSummary(url);
         res.send(response(status.SUCCESS, AIResponse ));
     } catch (err) {
-        return BaseError(status.BAD_REQUEST);
+        return BaseError(status.FETCH_FAIL);
     }
 }
 
@@ -36,7 +46,7 @@ export const createNewLinkCnt = async (req, res) => {
     try {
         res.send(response(status.CREATED, await createNewLinkSer(req.body)));
     } catch (err) {
-        return BaseError(status.BAD_REQUEST);
+        return BaseError(status.FAILED_TO_CREATE);
     }
 }
 
@@ -45,7 +55,7 @@ export const updateVisitCnt = async (req, res) => {
     try {
         res.send(response(status.SUCCESS, await updateVisitSer(req.params.link_id)))
     } catch (err){
-        return BaseError(status.BAD_REQUEST);
+        return BaseError(status.FAILED_TO_UPDATE);
     }
 }
 
@@ -53,7 +63,7 @@ export const updateLikeCnt = async (req, res) => {
     try {
         res.send(response(status.SUCCESS, await updateLikeSer(req.params.link_id)))
     } catch (err){
-        return BaseError(status.BAD_REQUEST);
+        return BaseError(status.FAILED_TO_UPDATE);
     }
 }
 /** 링크의 Zip 이동 */
@@ -62,7 +72,7 @@ export const updateZipIdCnt = async (req, res) => {
         const {link_id, new_zip_id} = req.params;
         res.send(response(status.SUCCESS, await updateZipIdSer(link_id, new_zip_id)));
     } catch (err){
-        return BaseError(status.BAD_REQUEST);
+        return BaseError(status.FAILED_TO_UPDATE);
     }
 }
 
@@ -71,6 +81,6 @@ export const deleteLinkByIdCnt = async (req, res) => {
     try {
         res.send(response(status.SUCCESS, await deleteLinkByIdSer(req.params.link_id)))
     } catch (err){
-        return BaseError(status.BAD_REQUEST);
+        return BaseError(status.FAILED_TO_DELETE);
     }
 }
