# swagger/link.swagger.yml
@@ -104,7 +104,113 @@ paths:
               message:
                 type: string
                 example: "서버 에러, 관리자에게 문의 바랍니다."
-
+  /link/get_link/{link_id}:
+    get:
+      tags:
+        - Link
+      summary: 링크 ID로 링크 데이터 가져오기
+      description: |
+        특정 링크 ID에 대한 링크 데이터를 가져옵니다.
+        요청된 링크가 존재하지 않는 경우 404 Not Found 상태 코드를 반환합니다.
+      parameters:
+        - name: link_id
+          in: path
+          description: '링크 ID 값을 경로 매개변수로 전달합니다.'
+          required: true
+          type: integer
+          format: int32
+          example: 1
+      responses:
+        200:
+          description: 링크 데이터가 성공적으로 호출된 경우
+          schema:
+            type: object
+            properties:
+              id:
+                type: integer
+              zip_id:
+                type: integer
+              user_id:
+                type: integer
+              title:
+                type: string
+              url:
+                type: string
+              text:
+                type: string
+              memo:
+                type: string
+              tag:
+                type: string
+              alert_date:
+                type: string
+                format: date-time
+              thumb:
+                type: string
+              like:
+                type: integer
+              visit:
+                type: integer
+              visit_date:
+                type: string
+                format: date-time
+              created_at:
+                type: string
+                format: date-time
+              updated_at:
+                type: string
+                format: date-time
+        400:
+          description: 잘못된 요청
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 400
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON001
+              message:
+                type: string
+                example: "잘못된 요청입니다"
+        404:
+          description: 링크를 찾을 수 없음
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 404
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: LINK002
+              message:
+                type: string
+                example: "해당 링크를 찾을 수 없습니다."
+        500:
+          description: 서버 에러
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 500
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON000
+              message:
+                type: string
+                example: "서버 에러, 관리자에게 문의 바랍니다."
   /link/summary:
     post:
       tags:
